Add a suffix thing to categories Fixes #42

--- a/blog/templates/blog/base_post_card.html
+++ b/blog/templates/blog/base_post_card.html
@@ -66,6 +66,8 @@
                 -
                 {{ object.series.description }}
               {% endif %}
+              ({{ context.series.all.count }}
+              Part series)
             </header>
             <ul class="list-group list-group-flush">
               {% for e in context.series %}
