--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -205,7 +205,7 @@
 
         <div class="field mb-2">
           {{ form.pub_date.label_tag }}
-          {{ form.pub_date|add_class:"form-control" }}
+          {{ form.pub_date|add_class:"form-control picker" }}
           {% if form.pub_date.help_text %}
             <span class="text-small text-muted">{{ form.pub_date.help_text }}</span>
           {% endif %}
