--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -262,7 +262,7 @@
 
           {% sitetree_breadcrumbs from "maintree" template "sitetree/breadcrumbs_bootstrap4.html" %}
 
-          {% block page_top_archives %}{% endblock page_top_archives %}
+          {% block page_top_archive %}{% endblock page_top_archive %}
 
           {% block content %}{% endblock content %}
         </div>
