--- a/blog/templates/blog/lists/filter_list.html
+++ b/blog/templates/blog/lists/filter_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content_main %}
-  <section class="row row-cols-1 row-cols-lg-3 me-0">
+  <section class="row row-cols-1 row-cols-md-2 row-cols-xxl-3 me-0">
     {% for post in filter %}
       <section class="mb-2 pe-0">
         {% include 'blog/post_card_in_lists.html' %}
