--- a/blog/templates/blog/lists/post_list.html
+++ b/blog/templates/blog/lists/post_list.html
@@ -86,7 +86,7 @@
 {% block content_main %}
 
   {% if not enable_tailwind_flag and user.is_authenticated and not user.enable_tailwind or not enable_tailwind_flag and not user.is_authenticated %}
-    <section class="row row-cols-1 row-cols-lg-3 me-0">
+    <section class="row row-cols-1 row-cols-md-2 row-cols-xxl-3 me-0">
       {% for post in posts %}
         <section class="mb-2 pe-0">
           {% comment %} {% endcomment %}
