--- a/blog/templates/blog/lists/series_list.html
+++ b/blog/templates/blog/lists/series_list.html
@@ -3,7 +3,7 @@
 
 {% block content_main %}
   {% if not enable_tailwind_flag and user.is_authenticated and not user.enable_tailwind or not enable_tailwind_flag and not user.is_authenticated %}
-    <div class="row row-cols-1 row-cols-lg-3 me-0">
+    <section class="row row-cols-1 row-cols-md-2 row-cols-xxl-3 me-0">
       {% for series in series_list %}
         <div class="mb-2 pe-0">
           <div id="series-{{ series.slug }}" class="card shadow h-100{% if user.is_authenticated and user.is_superuser and series.needs_reviewing %} border-warning{% endif %}">
@@ -37,7 +37,7 @@
           </div>
         </div>
       {% endfor %}
-    </div>
+    </section>
   {% elif enable_tailwind_flag or user.is_authenticated and user.enable_tailwind %}
     {% comment %} {% endcomment %}
     {% include 'tailwind/card_container.html' with object_list=series_list %}
