--- a/khoBlog/static/khoBlog/css/_custom.scss
+++ b/khoBlog/static/khoBlog/css/_custom.scss
@@ -26,7 +26,7 @@ $font-family-monospace: $monospace;
     @include border-color("border-color");
 
     &:hover {
-        color: white !important;
+        @include color("active-color");
     }
 }
 
@@ -72,10 +72,10 @@ $font-family-monospace: $monospace;
     }
 
     .cat-link {
-        @include color("side-link");
+        @include color("link");
 
         &:hover {
-            @include color("side-link");
+            @include color("link");
             text-decoration: underline;
         }
     }
@@ -155,7 +155,7 @@ $font-family-monospace: $monospace;
             @include border-color("border-color");
 
             &:hover {
-                color: white !important;
+                @include color("active-color");
             }
         }
 
