--- a/pages/templates/pages/page_list.html
+++ b/pages/templates/pages/page_list.html
@@ -3,9 +3,9 @@
 
 {% block main %}
   {% if not enable_tailwind_flag and user.is_authenticated and not user.enable_tailwind or not enable_tailwind_flag and not user.is_authenticated %}
-    <div class="row row-cols-1 row-cols-lg-3 me-0">
+    <section class="row row-cols-1 row-cols-md-2 row-cols-xxl-3 me-0">
       {% for page in pages %}
-        <div class="mb-2 pe-0">
+        <section class="mb-2 pe-0">
           <div id="page-{{ page.slug }}" class="card shadow h-100">
             {% if page.withdrawn %}
               <span class="position-absolute top-0 start-100 translate-middle badge border border-light rounded-circle bg-danger p-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Withdrawn"><span class="visually-hidden">Withdrawn</span></span>
@@ -37,9 +37,8 @@
               </span>
             </div>
           </div>
-        </div>
+        </section>
       {% endfor %}
-    </div>
   {% elif enable_tailwind_flag or user.is_authenticated and user.enable_tailwind %}
     {% comment %} {% endcomment %}
     {% include 'tailwind/card_container.html' with object_list=pages %}
