--- a/portfolio/templates/portfolio/project_list.html
+++ b/portfolio/templates/portfolio/project_list.html
@@ -23,7 +23,7 @@
       </div>
     {% endblock page_top_hr %}
 
-    <div class="row row-cols-1 row-cols-lg-3 me-0">
+    <section class="row row-cols-1 row-cols-md-2 row-cols-xxl-3 me-0">
       {% for project in projects %}
         <div class="mb-2 pe-0">
           <div id="project-{{ project.slug }}" class="card shadow h-100">
@@ -56,7 +56,7 @@
           </div>
         </div>
       {% endfor %}
-    </div>
+    </section>
   {% elif enable_tailwind_flag or user.is_authenticated and user.enable_tailwind %}
     {% comment %} {% endcomment %}
     {% include 'tailwind/card_container.html' with object_list=projects %}
